[project]
name = "unstructured"
description = "A library that prepares raw documents for downstream ML tasks."
requires-python = ">=3.11"
authors = [{name = "Unstructured Technologies", email = "devops@unstructuredai.io"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
readme = "README.md"
license = "Apache-2.0"
keywords = ["NLP", "PDF", "HTML", "CV", "XML", "parsing", "preprocessing"]
dynamic = ["version"]
dependencies = [
    "beautifulsoup4<5.0.0; python_version < '3.12'",
    "charset-normalizer<4.0.0; python_version < '3.12'",
    "emoji<3.0.0; python_version < '3.12'",
    "filetype<2.0.0; python_version < '3.12'",
    "html5lib<2.0.0; python_version < '3.12'",
    "langdetect<2.0.0; python_version < '3.12'",
    "lxml<7.0.0; python_version < '3.12'",
    "nltk<4.0.0; python_version < '3.12'",
    "numba<1.0.0; python_version < '3.12'",
    "numpy<3.0.0; python_version < '3.12'",
    "psutil<8.0.0; python_version < '3.12'",
    "python-iso639<2027.0.0; python_version < '3.12'",
    "python-magic<1.0.0; python_version < '3.12'",
    "python-oxmsg<1.0.0; python_version < '3.12'",
    "rapidfuzz<4.0.0; python_version < '3.12'",
    "requests<3.0.0; python_version < '3.12'",
    "tqdm<5.0.0; python_version < '3.12'",
    "typing-extensions<5.0.0; python_version < '3.12'",
    "unstructured-client>=0.25.9, <1.0.0; python_version < '3.12'",
    "wrapt<3.0.0; python_version < '3.12'",
    "beautifulsoup4>=4.14.3, <5.0.0; python_version >= '3.12'",
    "charset-normalizer>=3.4.4, <4.0.0; python_version >= '3.12'",
    "emoji>=2.15.0, <3.0.0; python_version >= '3.12'",
    "filetype>=1.2.0, <2.0.0; python_version >= '3.12'",
    "html5lib>=1.1, <2.0.0; python_version >= '3.12'",
    "langdetect>=1.0.9, <2.0.0; python_version >= '3.12'",
    "lxml>=5.0.0, <7.0.0; python_version >= '3.12'",
    "nltk>=3.9.2, <4.0.0; python_version >= '3.12'",
    "numba>=0.60.0, <1.0.0; python_version >= '3.12'",
    "numpy>=1.26.0, <3.0.0; python_version >= '3.12'",
    "psutil>=7.2.2, <8.0.0; python_version >= '3.12'",
    "python-iso639>=2026.1.31, <2027.0.0; python_version >= '3.12'",
    "python-magic>=0.4.27, <1.0.0; python_version >= '3.12'",
    "python-oxmsg>=0.0.2, <1.0.0; python_version >= '3.12'",
    "rapidfuzz>=3.14.3, <4.0.0; python_version >= '3.12'",
    "requests>=2.32.5, <3.0.0; python_version >= '3.12'",
    "tqdm>=4.67.3, <5.0.0; python_version >= '3.12'",
    "typing-extensions>=4.15.0, <5.0.0; python_version >= '3.12'",
    "unstructured-client>=0.25.9, <1.0.0; python_version >= '3.12'",
    "wrapt>=2.1.1, <3.0.0; python_version >= '3.12'",
]

[project.optional-dependencies]
# Document type extras
csv = [
    "pandas<4.0.0; python_version < '3.12'",
    "pandas>=2.0.0, <4.0.0; python_version >= '3.12'",
]
doc = [
    "unstructured[docx]",
]
docx = [
    "python-docx>=1.2.0, <2.0.0",
]
epub = [
    "pypandoc-binary<2.0.0; python_version < '3.12'",
    "pypandoc-binary>=1.16.2, <2.0.0; python_version >= '3.12'",
]
image = [
    "google-cloud-vision>=3.12.1, <4.0.0",
    "pdf2image<2.0.0; python_version < '3.12'",
    "pdf2image>=1.17.0, <2.0.0; python_version >= '3.12'",
    "pdfminer.six>=20260107, <20270000",
    "pi-heif<2.0.0; python_version < '3.12'",
    "pi-heif>=1.2.0, <2.0.0; python_version >= '3.12'",
    "pikepdf<11.0.0; python_version < '3.12'",
    "pikepdf>=10.3.0, <11.0.0; python_version >= '3.12'",
    "pypdf<7.0.0; python_version < '3.12'",
    "pypdf>=6.6.2, <7.0.0",
    "unstructured-inference>=1.2.0, <2.0.0",
    "unstructured-pytesseract>=0.3.15, <1.0.0",
]
md = [
    "markdown<4.0.0; python_version < '3.12'",
    "markdown>=3.10.1, <4.0.0; python_version >= '3.12'",
]
odt = [
    "pypandoc-binary<2.0.0; python_version < '3.12'",
    "pypandoc-binary>=1.16.2, <2.0.0; python_version >= '3.12'",
    "python-docx>=1.2.0, <2.0.0",
]
org = [
    "pypandoc-binary<2.0.0; python_version < '3.12'",
    "pypandoc-binary>=1.16.2, <2.0.0; python_version >= '3.12'",
]
pdf = [
    "unstructured[image]",
]
ppt = [
    "unstructured[pptx]",
]
pptx = [
    "python-pptx>=1.0.2, <2.0.0",
]
rtf = [
    "pypandoc-binary<2.0.0; python_version < '3.12'",
    "pypandoc-binary>=1.16.2, <2.0.0; python_version >= '3.12'",
]
rst = [
    "pypandoc-binary<2.0.0; python_version < '3.12'",
    "pypandoc-binary>=1.16.2, <2.0.0; python_version >= '3.12'",
]
tsv = [
    "unstructured[csv]",
]
xlsx = [
    "msoffcrypto-tool<7.0.0; python_version < '3.12'",
    "networkx<4.0.0; python_version < '3.12'",
    "openpyxl<4.0.0; python_version < '3.12'",
    "pandas<4.0.0; python_version < '3.12'",
    "xlrd<3.0.0; python_version < '3.12'",
    "msoffcrypto-tool>=6.0.0, <7.0.0; python_version >= '3.12'",
    "networkx>=3.2.0, <4.0.0; python_version >= '3.12'",
    "openpyxl>=3.1.5, <4.0.0; python_version >= '3.12'",
    "pandas>=2.0.0, <4.0.0; python_version >= '3.12'",
    "xlrd>=2.0.1, <3.0.0; python_version >= '3.12'",
]
all-docs = [
    "unstructured[csv,doc,docx,epub,image,md,odt,org,pdf,ppt,pptx,rtf,rst,tsv,xlsx]",
]
# Feature extras
chunking-tokens = [
    "tiktoken<1.0.0; python_version < '3.12'",
    "tiktoken>=0.12.0, <1.0.0; python_version >= '3.12'",
]
huggingface = [
    "sentencepiece<1.0.0; python_version < '3.12'",
    "torch<3.0.0; python_version < '3.12'",
    "transformers<5.0.0; python_version < '3.12'",
    "sentencepiece>=0.2.0, <1.0.0; python_version >= '3.12'",
    "torch>=2.10.0, <3.0.0; python_version >= '3.12'",
    "transformers>=4.55.4, <5.0.0; python_version >= '3.12'",
]
local-inference = [
    "unstructured[all-docs]",
]
paddleocr = [
    "paddlepaddle>=3.0.0b1, <4.0.0; python_version < '3.12'",
    "paddlepaddle>=3.3.0, <4.0.0; python_version >= '3.12'",
    "unstructured-paddleocr==2.10.0",
]
ingest = [
    "unstructured-ingest[airtable,astradb,azure,azure-ai-search,bedrock,biomed,box,chroma,confluence,couchbase,databricks-volumes,delta-table,discord,dropbox,elasticsearch,gcs,github,gitlab,google-drive,hubspot,huggingface,jira,kafka,kdbai,milvus,mongodb,notion,octoai,onedrive,openai,opensearch,outlook,pinecone,postgres,qdrant,reddit,remote,s3,salesforce,sftp,sharepoint,singlestore,slack,vectara,vertexai,voyageai,weaviate,wikipedia]>=1.3.1, <2.0.0; python_version >= '3.12'",
    "unstructured-ingest[airtable,astradb,azure,azure-ai-search,bedrock,biomed,box,chroma,confluence,couchbase,databricks-volumes,delta-table,discord,dropbox,elasticsearch,gcs,github,gitlab,google-drive,hubspot,huggingface,jira,kafka,kdbai,milvus,mongodb,notion,octoai,onedrive,openai,opensearch,outlook,pinecone,postgres,qdrant,reddit,remote,s3,salesforce,sftp,sharepoint,singlestore,slack,vectara,vertexai,voyageai,weaviate,wikipedia]<1.3.1; python_version < '3.12'",
]

[project.urls]
Homepage = "https://github.com/Unstructured-IO/unstructured"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "unstructured/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["/unstructured"]

[tool.hatch.build.targets.sdist]
packages = ["/unstructured"]

[dependency-groups]
test = [
    "coverage<8.0.0; python_version < '3.12'",
    "freezegun<2.0.0; python_version < '3.12'",
    "grpcio<2.0.0; python_version < '3.12'",
    "pip-licenses<6.0.0; python_version < '3.12'",
    "mypy<2.0.0; python_version < '3.12'",
    "pydantic<3.0.0; python_version < '3.12'",
    "pytest<10.0.0; python_version < '3.12'",
    "pytest-cov<8.0.0; python_version < '3.12'",
    "pytest-mock<4.0.0; python_version < '3.12'",
    "pytest-xdist<4.0.0; python_version < '3.12'",
    "types-click<8.0.0; python_version < '3.12'",
    "types-Markdown<4.0.0; python_version < '3.12'",
    "types-requests<3.0.0; python_version < '3.12'",
    "types-tabulate<1.0.0; python_version < '3.12'",
    "unstructured-pytesseract<1.0.0; python_version < '3.12'",
    "weaviate-client<4.0.0; python_version < '3.12'",
    "coverage>=7.13.3, <8.0.0; python_version >= '3.12'",
    "freezegun>=1.5.5, <2.0.0; python_version >= '3.12'",
    "grpcio>=1.78.0, <2.0.0; python_version >= '3.12'",
    "pip-licenses>=5.0.0, <6.0.0; python_version >= '3.12'",
    "mypy>=1.19.1, <2.0.0; python_version >= '3.12'",
    "pydantic>=2.12.5, <3.0.0; python_version >= '3.12'",
    "pytest>=9.0.2, <10.0.0; python_version >= '3.12'",
    "pytest-cov>=7.0.0, <8.0.0; python_version >= '3.12'",
    "pytest-mock>=3.15.1, <4.0.0; python_version >= '3.12'",
    "pytest-xdist>=3.8.0, <4.0.0; python_version >= '3.12'",
    "types-click>=7.1.8, <8.0.0; python_version >= '3.12'",
    "types-Markdown>=3.10.0.20251106, <4.0.0; python_version >= '3.12'",
    "types-requests>=2.32.4.20260107, <3.0.0; python_version >= '3.12'",
    "types-tabulate>=0.9.0.20241207, <1.0.0; python_version >= '3.12'",
    "unstructured-pytesseract>=0.3.15, <1.0.0; python_version >= '3.12'",
    "weaviate-client>=3.26.7, <4.0.0; python_version >= '3.12'",
]
dev = [
    "pre-commit<5.0.0; python_version < '3.12'",
    "pre-commit>=4.5.1, <5.0.0; python_version >= '3.12'",
]
lint = [
    "ruff<1.0.0; python_version < '3.12'",
    "ruff>=0.15.0, <1.0.0; python_version >= '3.12'",
]

[tool.uv]
constraint-dependencies = [
    # deltalake 1.3.0 is missing Linux ARM64 wheels, causing Docker ARM64 builds to fail
    "deltalake<1.3.0",
    "fonttools>=4.60.2",
    "protobuf>=6.30.0",
    "pykx>=3.1.6",  # 3.1.2 is missing macOS wheels (transitive dep of kdbai-client)
    "tokenizers>=0.21",
    "unstructured-client>=0.25.9",
    "urllib3; python_version < '3.12'",
    "weaviate-client; python_version < '3.12'",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true  # Public PyPI is the default


[tool.pyright]
pythonPlatform = "Linux"
pythonVersion = "3.12"
reportUnnecessaryCast = true
reportUnnecessaryTypeIgnoreComment = true
stubPath = "./typings"
typeCheckingMode = "strict"
verboseOutput = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "COM812",   # -- over aggressively insists on trailing commas where not desireable --
    "PT001",    # -- wants empty parens on @pytest.fixture where not used (essentially always) --
    "PT011",    # -- pytest.raises({exc}) too broad, use match param or more specific exception --
    "PT012",    # -- pytest.raises() block should contain a single simple statement --
    "SIM117",   # -- merge `with` statements for context managers that have same scope --
]
select = [
    "C4",       # -- flake8-comprehensions --
    "COM",      # -- flake8-commas --
    "E",        # -- pycodestyle errors --
    "F",        # -- pyflakes --
    "I",        # -- isort (imports) --
    "PLR0402",  # -- Name compared with itself like `foo == foo` --
    "PT",       # -- flake8-pytest-style --
    "SIM",      # -- flake8-simplify --
    "UP015",    # -- redundant `open()` mode parameter (like "r" is default) --
    "UP018",    # -- Unnecessary {literal_type} call like `str("abc")`. (rewrite as a literal) --
    "UP032",    # -- Use f-string instead of `.format()` call --
    "UP034",    # -- Avoid extraneous parentheses --
    "W",        # -- Warnings, including invalid escape-sequence --
]

[tool.ruff.lint.per-file-ignores]
"test_*/**" = ["D"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
python_classes = ["Test", "Describe"]
python_functions = ["test_", "it_", "they_", "but_", "and_"]
testpaths = [
    "test_unstructured",
    "test_unstructured_ingest",
]

[tool.coverage.report]
fail_under = 90

[tool.codeflash]
module-root = "unstructured"
tests-root = "test_unstructured"
test-framework = "pytest"
ignore-paths = []
formatter-cmds = ["ruff check --exit-zero --fix-only $file", "ruff format $file"]
