[metadata]
license_files = LICENSE.md

[flake8]
max-line-length = 100
exclude =
    .venv

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning
python_classes = Test Describe
python_functions = test_ it_ they_ but_ and_

[autoflake]
expand_star_imports=true
ignore_pass_statements=true
recursive=true
quiet=true
remove_all_unused_imports=true
remove_unused_variables=true
