[metadata]
license_files = LICENSE.md

[flake8]
ignore = E203,W503
max-line-length = 100
exclude =
    .venv
    unstructured-inference
per-file-ignores =
    *: T20

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning
python_classes = Test Describe
python_functions = test_ it_ they_ but_ and_
markers =
    chipper: mark a test as running chipper, which tends to be slow and compute-heavy.
testpaths =
    test_unstructured
    test_unstructured_ingest

[autoflake]
expand_star_imports=true
ignore_pass_statements=false
recursive=true
quiet=true
remove_all_unused_imports=true
remove_unused_variables=true
